@@ -47,6 +47,9 @@
   <ItemGroup>
     <Compile Include="ErrorStatusTextViewCreationListener.cs" />
     <Compile Include="ErrorStatusTracker.cs" />
+    <Compile Include="HotStatusOptions.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="HotStatusPackage.cs" />
   </ItemGroup>
